added new feature

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>This the local repo html file</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Welcome to my local repository</h1>
+        <p>This is a sample HTML file in my local repository contain new feature for feature 1 branch.</p>
+    </div>
 </body>
 </html>
