--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="container">
         <h1>Welcome to my local repository</h1>
-        <p>This is a sample HTML file in my local repository contain new feature for feature 1 branch.</p>
+        <p>This is a sample HTML file in my local repository contain new feature for <a href="">OK</a>.</p>
     </div>
 </body>
 </html>
